# ChangeLog for games-rpg/wastesedge
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/wastesedge/ChangeLog,v 1.5 2004/06/24 23:17:22 agriffis Exp $

  10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  wastesedge-0.3.3.ebuild:
  error messages

  11 Feb 2004; David Holm <dholm@gentoo.org> wastesedge-0.3.3.ebuild:
  Added to ~ppc.

  12 Jun 2003; <msterret@gentoo.org> wastesedge-0.3.3.ebuild:
  add Header

*wastesedge-0.3.3 (02 Mar 2003)

  02 Mar 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Luca Barbato <lu_zero@gentoo.org> #11875.