@@ -1,4 +1,4 @@
-MD5 bf3e65f515e1cd2da95ddc91f33e8a44 wastesedge-0.3.3.ebuild 1030
-MD5 cf1c1df2d3ab84d85f2d1db95396f58d ChangeLog 645
+MD5 10596e85c8ad4d0776d57e320602bc31 ChangeLog 770
+MD5 a643e5e18613d3bf4e67d88026622a8c wastesedge-0.3.3.ebuild 1185
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 MD5 68e07fed88cbac21fd1820576f035922 files/digest-wastesedge-0.3.3 70
